Don't clone hover item, apply styles to the original container. Contextual menu rotates are now immediately visible. Fixes ticket 667.

--- a/themes/default/css/screen.css
+++ b/themes/default/css/screen.css
@@ -406,7 +406,6 @@ form .gError,
 }
 
 #gSidebar {
-  background-color: #fff;
   font-size: .9em;
   padding: 0 20px;
   width: 220px;
@@ -492,23 +491,13 @@ form .gError,
   width: 16px;
 }
 
-#gContent #gAlbumGrid #gHoverItem {
+#gContent #gAlbumGrid .gHoverItem {
   background-color: #fff;
   border: 1px solid #000;
-  display: none;
-  height: auto;
-  padding: 0;
-  position: absolute;
-  width: auto;
-  z-index: 100;
 }
 
-#gContent #gAlbumGrid #gHoverItem .gItem {
-  border: none;
-}
-
-#gContent #gHoverItem .gItem h2,
-#gContent #gHoverItem .gItem .gMetadata {
+#gContent .gHoverItem h2,
+#gContent .gHoverItem .gMetadata {
   display: block;
 }
 
@@ -647,15 +636,15 @@ form .gError,
   line-height: 1.6em;
 }
 
-#gHoverItem .gContextMenu {
+.gHoverItem .gContextMenu {
   display: block;
 }
 
-#gHoverItem .gContextMenu li {
+.gHoverItem .gContextMenu li {
   text-align: left;
 }
 
-#gHoverItem .gContextMenu a:hover {
+.gHoverItem .gContextMenu a:hover {
   text-decoration: none;
 }
 
